gtk+2.0 (2.16.0-2) UNRELEASED; urgency=low

  [ Loic Minier ]
  * Clarify dh_gtkmodules doc slightly.

  [ Gustavo Noronha Silva ]
  * debian/series:
  - forgot to add 022_disable-viqr-im-for-vi-locale.patch and
    061_use_pdf_as_default_printing_standard.patch to the series file
    (thanks to seb128 for noticing)

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 23 Mar 2009 13:55:39 -0300

gtk+2.0 (2.16.0-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 suggest gvfs, as it's needed for some APIs like
    gtk_show_uri.

  [ Josselin Mouette ]
  * libgtk2.0-0 depends on shared-mime-info. Closes: #518090.
  * Add dependent doc packages to b-d-i to ensure proper xrefs.

  [ Loic Minier ]
  * Clean up dh_gtkmodules output:
    - Demote warnings when skipping non-existent GtkPixbuf loaders and Gtk IM
      modules dirs to verbose_print(); use -v to see them.
    - Always print the number of GdkPixbuf loaders and Gtk IM modules found in
      each package.

  [ Emilio Pozuelo Monfort ]
  * New upstream stable release.
    - Bump shlibs.
    - debian/patches/070_mandatory-relibtoolize.patch: regenerated.
  * Ship the gtk-builder-convert manpage in libgtk2.0-dev.
  * Section of dbg packages is debug.

 -- Emilio Pozuelo Monfort <pochu@ubuntu.com>  Sun, 15 Mar 2009 20:10:34 +0100

gtk+2.0 (2.15.5-2) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
  - bump libglib2.0-dev build-dep requirement to >= 2.19.7
  - bump libxrandr-dev build-dep requirement to >= 1:1.2.99
  - also bump libgtk2.0-dev dependecies accordingly
    (Closes: #518078)

  [ Gustavo Noronha Silva ]
  * 042_treeview_single-focus.patch:
  - removed FIXME note, since it was explained to me that the patch is
    still necessary
  * debian/rules:
  - bumped SHVER to 2.15.5

  [ Imported from Ubuntu ]
  * 022_disable-viqr-im-for-vi-locale.patch,
    061_use_pdf_as_default_printing_standard.patch:
  - for the rationale for the PDF for printing one see: